# open_cv

./: .gitignore  CMakeLists.txt  README.md  color_pick.cpp  main.cpp
